--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "@swimlane/ngx-charts": "^7.0.1",
     "core-js": "^2.4.1",
+    "date-fns": "^1.29.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
